--- a/src/index.html
+++ b/src/index.html
@@ -40,5 +40,20 @@
             </div>
         </div>
     </header>
+    <main class="main-content">
+        <img src="assets/images/hero.jpeg" alt="main image" class="main-image">
+        <div class="main-controls">
+            <h1 class="main-title">Arcane</h1>
+            <p class="main-description">League of Legends Animated Show</p>
+            <button class="main-play-btn">
+                <i class="fa-solid fa-play"></i>
+                Play
+            </button>
+            <button class="main-more-info-btn">
+                <i class="fa-solid fa-circle-info"></i>
+                More Info
+            </button>
+        </div>
+    </main>
 </body>
 </html>
