WIP Card Template
-on hover scale up
-show bottom controls and info

--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,29 @@
                 More Info
             </button>
         </div>
+        <section class="section-popular">
+            <h2 class="section-header">Popular on Netflix</h2>
+            <div class="section-card">
+                <div class="card-image">
+                    <img src="assets/images/tmp-card.png" alt="movie image">
+                </div>
+                <div class="card-bottom">
+                    <div class="card-controls">
+                        <button class="card-play"><i class="fa-solid fa-circle-play"></i></button>
+                        <button class="card-add"><i class="fa-solid fa-circle-plus"></i></button>
+                        <button class="card-like"><i class="fa-brands fa-gratipay card-like"></i></button>
+                        <button class="card-info"><i class="fa-solid fa-circle-chevron-down card-info"></i></button>
+                    </div>
+                    <div class="card-text">
+                        <div class="text-top">
+                            <p class="match">100% Match</p>
+                            <p class="length-or-season">3 Volumes</p>
+                        </div>
+                        <p class="genres">Mind-Bending Dystopian Cyberpunk</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
